<resources>
    <string name="app_name">JogTracker</string>
    <string name="uuid">UUID</string>
    <string name="login">login</string>
    <string name="home">home</string>
    <string name="add">add</string>
    <string name="feedback">feedback</string>
    <string name="date">date (dd.mm.yyyy)</string>
    <string name="time">time (minutes)</string>
    <string name="distance">distance (meters)</string>
    <string name="send_jog">create</string>
    <string name="distance_format">%.0f</string>
    <string name="time_format">%s</string>
    <string name="date_format">%s</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="topic_id">Topic id</string>
    <string name="send">send</string>
    <string name="send_feedback">Send feedback</string>
    <string name="image">image</string>
    <string name="sorting">sorting</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="cancel">cancel</string>
    <string-array name="topic_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
    </string-array>
</resources>