<?xml version="1.0" encoding="utf-8"?>

<layout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="jogEntity"
            type="com.example.domain.models.JogEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background_color"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/time"
            style="@style/myTextInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/distance_text_view"
            app:layout_constraintStart_toStartOf="@+id/distance_text_view"
            app:layout_constraintTop_toBottomOf="@+id/distance_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textColor="@color/black"
                android:text="@{@string/time_format(jogEntity.time)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/distance_text_view"
            android:layout_width="0dp"
            style="@style/myTextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/distance"
            app:layout_constraintEnd_toStartOf="@+id/edit_image_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/distance_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textColor="@color/black"
                android:text="@{@string/distance_format(jogEntity.distance)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/myTextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/date"
            app:layout_constraintEnd_toStartOf="@+id/edit_image_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@color/black"
                android:text="@{@string/date_format(jogEntity.date)}" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/edit_image_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/update_image_button"
            android:background="@color/white"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_image_button"
            app:layout_constraintStart_toStartOf="@+id/edit_image_button"
            app:layout_constraintTop_toBottomOf="@+id/edit_image_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>